Add some refactorings